Fix being unable to scroll tab bar on Firefox when window width is smaller than 1440px

--- a/src/components/TabBar/TabBar.css
+++ b/src/components/TabBar/TabBar.css
@@ -47,6 +47,5 @@
     overflow-x: auto;
     overflow-y: hidden;
     -ms-overflow-style: none;
-    overflow: -moz-scrollbars-none;
   }
 }
